[gd_scene load_steps=11 format=4 uid="uid://b4rnn5dahj116"]

[ext_resource type="Texture2D" uid="uid://dx0qm5dy3dpes" path="res://assets/tilesets/plains.png" id="1_436xa"]
[ext_resource type="Script" path="res://scripts/cliff_side.gd" id="1_jy187"]
[ext_resource type="Texture2D" uid="uid://ckujrvgrcye12" path="res://assets/tilesets/grass.png" id="2_vj2uk"]
[ext_resource type="Texture2D" uid="uid://cjc2apgyhsj4k" path="res://assets/objects/objects.png" id="3_uargh"]
[ext_resource type="PackedScene" uid="uid://0i46woox88yd" path="res://scenes/player.tscn" id="4_h5t1n"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dbkh4"]
texture = ExtResource("1_436xa")
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0
0:4/0 = 0
0:5/0 = 0
0:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 6.25, -8, 6.125)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 6.875, -0.25, 6.75, -5, 3.25, -4.875, -8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -5.125, 8, -4.875, -8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 6.25, -8, 6.25, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.5, 3.5, 5.625, 8, -8, 8, -8, -4.5, -0.25, -4.375)
2:4/0 = 0
2:4/0/y_sort_origin = 5
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -4.375, 8, 8, -8, 8, -8, -4.5)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -4.375, 8, 8, -5.625, 8, 0.875, -4)
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
3:2/0 = 0
2:2/0 = 0
1:2/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
3:0/0 = 0
2:0/0 = 0
1:0/0 = 0
4:0/0 = 0
5:0/0 = 0
5:1/0 = 0
4:1/0 = 0
4:2/0 = 0
5:2/0 = 0
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
4:6/0 = 0
5:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cg2kf"]
texture = ExtResource("2_vj2uk")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_euru5"]
texture = ExtResource("3_uargh")
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = 20
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9.72272, 11.9324, -9.8995, -16.1751, 8.13173, -16.3518, 7.95495, 12.286, 13.7886, 25.721, -16.0867, 25.3675)
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/y_sort_origin = 9
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.9099, -8.48528, -7.6014, -14.1421, 7.42462, -13.9654, 14.6725, -6.18719, 15.026, 8.83883, 8.66206, 15.5563, -8.83883, 15.5563, -16.2635, 9.01561)
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/y_sort_origin = 16
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 7, 8, 7.25, 20.75, -8, 20.75)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/y_sort_origin = 7
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.125, -2.5, 12.875, -3, 11.875, 10.5, -10.875, 10.5)
11:2/size_in_atlas = Vector2i(1, 2)
11:2/0 = 0
0:0/0 = 0
0:0/0/y_sort_origin = 4
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.25, 2.5, 4, 2.25, 4.75, 5.75, -5.25, 6)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -2.5, 8, -2, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/y_sort_origin = 5
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -1.125, 8, -1.25, 8, 5.75, -8, 5.875)
11:0/0 = 0
10:0/0 = 0

[sub_resource type="TileSet" id="TileSet_j2mu5"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_dbkh4")
sources/1 = SubResource("TileSetAtlasSource_cg2kf")
sources/2 = SubResource("TileSetAtlasSource_euru5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3e2fv"]
size = Vector2(33, 13.5)

[node name="cliff_side" type="Node2D"]
script = ExtResource("1_jy187")

[node name="Dirt" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAACAAEAAAAAAAEAAAACAAEAAAAAAAIAAAACAAEAAAAAAAMAAAACAAEAAAAAAAQAAAACAAEAAAAAAAUAAAACAAEAAAAAAAYAAAACAAEAAAAAAAcAAAACAAEAAAAAAAgAAAACAAEAAAAAAAkAAAACAAEAAAABAAAAAAACAAEAAAABAAEAAAACAAEAAAABAAIAAAACAAEAAAABAAMAAAACAAEAAAABAAQAAAACAAEAAAABAAUAAAACAAEAAAABAAYAAAACAAEAAAABAAcAAAACAAEAAAABAAgAAAACAAEAAAABAAkAAAACAAEAAAACAAAAAAACAAEAAAACAAEAAAACAAEAAAACAAIAAAACAAEAAAACAAMAAAACAAEAAAACAAQAAAACAAEAAAACAAUAAAACAAEAAAACAAYAAAACAAEAAAACAAcAAAACAAEAAAACAAgAAAACAAEAAAACAAkAAAACAAEAAAADAAAAAAACAAEAAAADAAEAAAACAAEAAAADAAIAAAACAAEAAAADAAMAAAACAAEAAAADAAQAAAACAAEAAAADAAUAAAACAAEAAAADAAYAAAACAAEAAAADAAcAAAACAAEAAAADAAgAAAACAAEAAAADAAkAAAACAAEAAAAEAAAAAAACAAEAAAAEAAEAAAACAAEAAAAEAAIAAAACAAEAAAAEAAMAAAACAAEAAAAEAAQAAAACAAEAAAAEAAUAAAACAAEAAAAEAAYAAAACAAEAAAAEAAcAAAACAAEAAAAEAAgAAAACAAEAAAAEAAkAAAACAAEAAAAFAAAAAAACAAEAAAAFAAEAAAACAAEAAAAFAAIAAAACAAEAAAAFAAMAAAACAAEAAAAFAAQAAAACAAEAAAAFAAUAAAACAAEAAAAFAAYAAAACAAEAAAAFAAcAAAACAAEAAAAFAAgAAAACAAEAAAAFAAkAAAACAAEAAAAGAAAAAAACAAEAAAAGAAEAAAACAAEAAAAGAAIAAAACAAEAAAAGAAMAAAACAAEAAAAGAAQAAAACAAEAAAAGAAUAAAACAAEAAAAGAAYAAAACAAEAAAAGAAcAAAACAAEAAAAGAAgAAAACAAEAAAAGAAkAAAACAAEAAAAHAAAAAAACAAEAAAAHAAEAAAACAAEAAAAHAAIAAAACAAEAAAAHAAMAAAACAAEAAAAHAAQAAAACAAEAAAAHAAUAAAACAAEAAAAHAAYAAAACAAEAAAAHAAcAAAACAAEAAAAHAAgAAAACAAEAAAAHAAkAAAACAAEAAAAIAAAAAAACAAEAAAAIAAEAAAACAAEAAAAIAAIAAAACAAEAAAAIAAMAAAACAAEAAAAIAAQAAAACAAEAAAAIAAUAAAACAAEAAAAIAAYAAAACAAEAAAAIAAcAAAACAAEAAAAIAAgAAAACAAEAAAAIAAkAAAACAAEAAAAJAAAAAAACAAEAAAAJAAEAAAACAAEAAAAJAAIAAAACAAEAAAAJAAMAAAACAAEAAAAJAAQAAAACAAEAAAAJAAUAAAACAAEAAAAJAAYAAAACAAEAAAAJAAcAAAACAAEAAAAJAAgAAAACAAEAAAAJAAkAAAACAAEAAAAAAAoAAAACAAEAAAAAAAsAAAACAAEAAAAAAAwAAAACAAEAAAAAAA0AAAACAAEAAAABAAoAAAACAAEAAAABAAsAAAACAAEAAAABAAwAAAACAAEAAAABAA0AAAACAAEAAAACAAoAAAACAAEAAAACAAsAAAACAAEAAAACAAwAAAACAAEAAAACAA0AAAACAAEAAAADAAoAAAACAAEAAAADAAsAAAACAAEAAAADAAwAAAACAAEAAAADAA0AAAACAAEAAAAEAAoAAAACAAEAAAAEAAsAAAACAAEAAAAEAAwAAAACAAEAAAAEAA0AAAACAAEAAAAFAAoAAAACAAEAAAAFAAsAAAACAAEAAAAFAAwAAAACAAEAAAAFAA0AAAACAAEAAAAGAAoAAAACAAEAAAAGAAsAAAACAAEAAAAGAAwAAAACAAEAAAAGAA0AAAACAAEAAAAHAAoAAAACAAEAAAAHAAsAAAACAAEAAAAHAAwAAAACAAEAAAAHAA0AAAACAAEAAAAIAAoAAAACAAEAAAAIAAsAAAACAAEAAAAIAAwAAAACAAEAAAAIAA0AAAACAAEAAAAJAAoAAAACAAEAAAAJAAsAAAACAAEAAAAJAAwAAAACAAEAAAAJAA0AAAACAAEAAAA=")
tile_set = SubResource("TileSet_j2mu5")

[node name="Mountains" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAGAAcAAAABAAQAAAAHAAcAAAACAAQAAAAGAAgAAAABAAUAAAAGAAkAAAABAAUAAAAIAAUAAAABAAUAAAAIAAYAAAABAAUAAAAIAAcAAAAFAAUAAAADAAkAAAADAAUAAAADAAgAAAADAAUAAAADAAcAAAADAAQAAAACAAcAAAACAAQAAAABAAcAAAAEAAUAAAABAAYAAAADAAUAAAABAAUAAAADAAUAAAABAAQAAAADAAUAAAABAAMAAAAEAAQAAAACAAMAAAACAAYAAAADAAMAAAACAAYAAAAEAAMAAAACAAYAAAAFAAMAAAACAAYAAAAGAAMAAAACAAYAAAAHAAMAAAACAAYAAAAIAAMAAAAFAAQAAAAIAAQAAAABAAUAAAACAAgAAAACAAUAAAACAAkAAAACAAUAAAABAAkAAAACAAUAAAABAAgAAAACAAUAAAAAAAgAAAACAAUAAAAAAAkAAAACAAUAAAAAAAcAAAACAAUAAAAAAAYAAAACAAUAAAAAAAUAAAACAAUAAAAAAAQAAAACAAUAAAAAAAMAAAACAAUAAAAAAAIAAAACAAUAAAABAAIAAAACAAUAAAABAAEAAAACAAUAAAABAAAAAAACAAUAAAAAAAAAAAACAAUAAAAAAAEAAAACAAUAAAACAAEAAAACAAUAAAACAAAAAAACAAUAAAADAAAAAAACAAUAAAAEAAAAAAACAAUAAAAFAAAAAAACAAUAAAAGAAAAAAACAAUAAAAGAAEAAAACAAUAAAAHAAEAAAACAAUAAAAIAAEAAAACAAUAAAAJAAEAAAACAAUAAAAIAAIAAAACAAUAAAAHAAIAAAACAAUAAAAGAAIAAAACAAUAAAAFAAIAAAACAAUAAAAFAAEAAAACAAUAAAAEAAEAAAACAAUAAAADAAEAAAACAAUAAAADAAIAAAACAAUAAAAEAAIAAAACAAUAAAACAAIAAAACAAUAAAAHAAAAAAACAAUAAAAIAAAAAAACAAUAAAAJAAAAAAACAAUAAAAJAAIAAAACAAUAAAAJAAMAAAACAAUAAAAJAAQAAAACAAUAAAAJAAUAAAACAAUAAAAJAAYAAAACAAUAAAAJAAcAAAACAAUAAAAJAAgAAAACAAUAAAAJAAkAAAACAAUAAAAIAAkAAAACAAUAAAAIAAgAAAACAAUAAAAHAAgAAAACAAUAAAAHAAkAAAACAAUAAAAGAAoAAAAFAAUAAAAFAAoAAAACAAQAAAADAAoAAAAEAAUAAAAEAAoAAAACAAQAAAAAAAoAAAACAAUAAAAAAAsAAAACAAUAAAABAAoAAAACAAUAAAABAAsAAAACAAUAAAACAAoAAAACAAUAAAACAAsAAAACAAUAAAAAAAwAAAACAAUAAAAAAA0AAAACAAUAAAABAAwAAAACAAUAAAABAA0AAAACAAUAAAACAAwAAAACAAUAAAACAA0AAAACAAUAAAADAAsAAAACAAUAAAADAAwAAAACAAUAAAADAA0AAAACAAUAAAAEAAsAAAACAAUAAAAEAAwAAAACAAUAAAAEAA0AAAACAAUAAAAFAAsAAAACAAUAAAAFAAwAAAACAAUAAAAFAA0AAAACAAUAAAAGAAsAAAACAAUAAAAGAAwAAAACAAUAAAAGAA0AAAACAAUAAAAHAAsAAAACAAUAAAAHAAwAAAACAAUAAAAHAA0AAAACAAUAAAAIAAsAAAACAAUAAAAIAAwAAAACAAUAAAAIAA0AAAACAAUAAAAJAAsAAAACAAUAAAAJAAwAAAACAAUAAAAJAA0AAAACAAUAAAAHAAoAAAACAAUAAAAIAAoAAAACAAUAAAAJAAoAAAACAAUAAAD7/wAAAAACAAUAAAD7/wEAAAACAAUAAAD7/wIAAAACAAUAAAD7/wMAAAACAAUAAAD7/wQAAAACAAUAAAD7/wUAAAACAAUAAAD7/wYAAAACAAUAAAD7/wcAAAACAAUAAAD7/wgAAAACAAUAAAD7/wkAAAACAAUAAAD7/woAAAACAAUAAAD7/wsAAAACAAUAAAD7/wwAAAACAAUAAAD7/w0AAAACAAUAAAD8/wAAAAACAAUAAAD8/wEAAAACAAUAAAD8/wIAAAACAAUAAAD8/wMAAAACAAUAAAD8/wQAAAACAAUAAAD8/wUAAAACAAUAAAD8/wYAAAACAAUAAAD8/wcAAAACAAUAAAD8/wgAAAACAAUAAAD8/wkAAAACAAUAAAD8/woAAAACAAUAAAD8/wsAAAACAAUAAAD8/wwAAAACAAUAAAD8/w0AAAACAAUAAAD9/wAAAAACAAUAAAD9/wEAAAACAAUAAAD9/wIAAAACAAUAAAD9/wMAAAACAAUAAAD9/wQAAAACAAUAAAD9/wUAAAACAAUAAAD9/wYAAAACAAUAAAD9/wcAAAACAAUAAAD9/wgAAAACAAUAAAD9/wkAAAACAAUAAAD9/woAAAACAAUAAAD9/wsAAAACAAUAAAD9/wwAAAACAAUAAAD9/w0AAAACAAUAAAD+/wAAAAACAAUAAAD+/wEAAAACAAUAAAD+/wIAAAACAAUAAAD+/wMAAAACAAUAAAD+/wQAAAACAAUAAAD+/wUAAAACAAUAAAD+/wYAAAACAAUAAAD+/wcAAAACAAUAAAD+/wgAAAACAAUAAAD+/wkAAAACAAUAAAD+/woAAAACAAUAAAD+/wsAAAACAAUAAAD+/wwAAAACAAUAAAD+/w0AAAACAAUAAAD//wAAAAACAAUAAAD//wEAAAACAAUAAAD//wIAAAACAAUAAAD//wMAAAACAAUAAAD//wQAAAACAAUAAAD//wUAAAACAAUAAAD//wYAAAACAAUAAAD//wcAAAACAAUAAAD//wgAAAACAAUAAAD//wkAAAACAAUAAAD//woAAAACAAUAAAD//wsAAAACAAUAAAD//wwAAAACAAUAAAD//w0AAAACAAUAAAAKAAAAAAACAAUAAAAKAAEAAAACAAUAAAAKAAIAAAACAAUAAAAKAAMAAAACAAUAAAAKAAQAAAACAAUAAAAKAAUAAAACAAUAAAAKAAYAAAACAAUAAAAKAAcAAAACAAUAAAAKAAgAAAACAAUAAAAKAAkAAAACAAUAAAAKAAoAAAACAAUAAAAKAAsAAAACAAUAAAAKAAwAAAACAAUAAAAKAA0AAAACAAUAAAALAAAAAAACAAUAAAALAAEAAAACAAUAAAALAAIAAAACAAUAAAALAAMAAAACAAUAAAALAAQAAAACAAUAAAALAAUAAAACAAUAAAALAAYAAAACAAUAAAALAAcAAAACAAUAAAALAAgAAAACAAUAAAALAAkAAAACAAUAAAALAAoAAAACAAUAAAALAAsAAAACAAUAAAALAAwAAAACAAUAAAALAA0AAAACAAUAAAAMAAAAAAACAAUAAAAMAAEAAAACAAUAAAAMAAIAAAACAAUAAAAMAAMAAAACAAUAAAAMAAQAAAACAAUAAAAMAAUAAAACAAUAAAAMAAYAAAACAAUAAAAMAAcAAAACAAUAAAAMAAgAAAACAAUAAAAMAAkAAAACAAUAAAAMAAoAAAACAAUAAAAMAAsAAAACAAUAAAAMAAwAAAACAAUAAAAMAA0AAAACAAUAAAANAAAAAAACAAUAAAANAAEAAAACAAUAAAANAAIAAAACAAUAAAANAAMAAAACAAUAAAANAAQAAAACAAUAAAANAAUAAAACAAUAAAANAAYAAAACAAUAAAANAAcAAAACAAUAAAANAAgAAAACAAUAAAANAAkAAAACAAUAAAANAAoAAAACAAUAAAANAAsAAAACAAUAAAANAAwAAAACAAUAAAANAA0AAAACAAUAAAAOAAAAAAACAAUAAAAOAAEAAAACAAUAAAAOAAIAAAACAAUAAAAOAAMAAAACAAUAAAAOAAQAAAACAAUAAAAOAAUAAAACAAUAAAAOAAYAAAACAAUAAAAOAAcAAAACAAUAAAAOAAgAAAACAAUAAAAOAAkAAAACAAUAAAAOAAoAAAACAAUAAAAOAAsAAAACAAUAAAAOAAwAAAACAAUAAAAOAA0AAAACAAUAAAAPAAAAAAACAAUAAAAPAAEAAAACAAUAAAAPAAIAAAACAAUAAAAPAAMAAAACAAUAAAAPAAQAAAACAAUAAAAPAAUAAAACAAUAAAAPAAYAAAACAAUAAAAPAAcAAAACAAUAAAAPAAgAAAACAAUAAAAPAAkAAAACAAUAAAAPAAoAAAACAAUAAAAPAAsAAAACAAUAAAAPAAwAAAACAAUAAAAPAA0AAAACAAUAAAA=")
tile_set = SubResource("TileSet_j2mu5")

[node name="collisions" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions"]
polygon = PackedVector2Array(22, 60, 31, 65, 129, 64, 130, 114, 102, 116, 96, 127, 98, 190, 64, 190, 64, 126, 58, 114, 32, 115, 31, 66, 22, 60, 25, 119, 53, 119, 56, 129, 59, 196, 104, 195, 103, 129, 107, 122, 139, 121, 136, 47, 31, 48)

[node name="player" parent="." instance=ExtResource("4_h5t1n")]
position = Vector2(79, 126)

[node name="cliffside_exit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cliffside_exit"]
position = Vector2(80.5, 157.75)
shape = SubResource("RectangleShape2D_3e2fv")

[connection signal="body_entered" from="cliffside_exit" to="." method="_on_cliffside_exit_body_entered"]
[connection signal="body_exited" from="cliffside_exit" to="." method="_on_cliffside_exit_body_exited"]
